# fraud-guard

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/ml/: __init__.py  preprocessing.py
backend/app/schemas/: common.py  dataset.py  ml.py
backend/app/services/: dataset_service.py  prediction_service.py  training_service.py
backend/app/utils/: paths.py
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  fraudApi.ts
frontend/src/components/: ErrorAlert.tsx  LoadingCards.tsx  MetricCard.tsx  PageHeader.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  skeleton.tsx  table.tsx  tabs.tsx  tooltip.tsx
frontend/src/hooks/: useAsyncData.ts  useDashboardData.ts  useDataset.ts  useModels.ts  usePrediction.ts  useTraining.ts
frontend/src/lib/: formatters.ts
frontend/src/pages/: DashboardPage.tsx  DatasetPage.tsx  ModelsPage.tsx  PredictPage.tsx
frontend/src/types/: api.ts
