[project]
name = "fraud-detection-backend"
version = "0.1.0"
description = "FastAPI backend for credit card fraud detection with machine learning models."
requires-python = ">=3.12,<3.15"
dependencies = [
    "catboost>=1.2.7",
    "fastapi>=0.116.0",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=2.1.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

